--- a/style.css
+++ b/style.css
@@ -1,61 +1,65 @@
--/* Styling for the chessboard title with Google Font */
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0e68c; /* Light yellow background for the whole page */
+}
+
 #title {
     font-family: 'Black Ops One', sans-serif;
     font-size: 36px;
     font-weight: normal;
     text-align: center;
     background-color: lightyellow;
-    padding: 20px;
-    margin-bottom: 20px;
+    width: 10000px; /* Ensure the title spans full width of the container */
+    padding: 0px;
 }
 
-/* Centering the board */
 #container {
-    width: 480px;
-    margin: 0 auto;
+    width: px;
     display: flex;
     flex-direction: column;
+    background-image: url('https://raw.githubusercontent.com/luckyykat/a2/main/Poliigon_StoneQuartzite_BaseColor.jpg');
+    background-size: cover;
+    background-position: center;
+    padding: 450px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  
+      
+  
 }
 
-/* Styling for rows to create a chessboard */
 .row {
     display: flex;
 }
 
-/* Black and white squares */
 .white, .black {
     width: 60px;
     height: 60px;
-    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-/* White square color */
 .white {
-    background-color: white;
+    background-color: #ffffff;
 }
 
-/* Black square color */
 .black {
     background-color: #787878;
 }
 
-/* Styling images inside chessboard cells */
 img {
     max-width: 100%;
     max-height: 100%;
 }
 
-/* Footer styling */
 #footer {
-    width: 100%;
-    height: 50px;
-    background-color: #f4f4f4;
+    width: 10000px; /* Match the width of the title and container */
+    background-color: lightyellow;
     text-align: center;
-    margin-top: 20px;
-    position: relative;
-    clear: both;
-  background-color: lightyellow;
-}
+    padding: 10px 0; /* Reduced padding to make footer less stretched */
+    margin-top: 5px;
